# analitza

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  Analitza5Config.cmake.in  Analitza6Config.cmake.in  AnalitzaConfig.cmake.in  CMakeLists.txt  Mainpage.dox  Messages.sh  analitza.kdev4  config-analitza.h.cmake  config-kalgebra.h.cmake  extractplots
analitza/: CMakeLists.txt  abstractexpressiontransformer.cpp  abstractexpressiontransformer.h  abstractexpressionvisitor.cpp  abstractexpressionvisitor.h  abstractlexer.cpp  abstractlexer.h  additionchains.h  analitzaexport.h  analitzautils.cpp  analitzautils.h  analyzer.cpp  analyzer.h  apply.cpp  apply.h  builtinmethods.cpp  builtinmethods.h  container.cpp  container.h  customobject.cpp  customobject.h  exp.g  explexer.cpp  explexer.h  expression.cpp  expression.h  expressionparser.cpp  expressionparser.h  expressionstream.cpp  expressionstream.h  expressiontable.cpp  expressiontable_p.h  expressiontype.cpp  expressiontype.h  expressiontypechecker.cpp  expressiontypechecker.h  expressionwriter.h  htmlexpressionwriter.cpp  htmlexpressionwriter.h  importqobjectmetatype.cpp  (+42 more)
analitza/commands/: blockmatrixcommands.cpp  blockmatrixcommands.h  combinatronics.cpp  combinatronics.h  eigencommands.cpp  eigencommands.h  listcommands.cpp  listcommands.h  matrixbuiltinmethods.cpp  matrixcommands.cpp  matrixcommands.h  matrixqueries.cpp  matrixqueries.h  realpower.cpp  realpower.h  vectorcommands.cpp  vectorcommands.h
analitza/tests/: CMakeLists.txt  analitzajittest.cpp  analitzatest.cpp  analitzatest.h  builtintest.cpp  builtintest.h  commandstest.cpp  commandstest.h  expressiontest.cpp  expressiontest.h  exptest.cpp  exptest.h  matchingtest.cpp  matchingtest.h  mathmlpresentationtest.cpp  mathmlpresentationtest.h  matrixtest.cpp  matrixtest.h  typechecktest.cpp  typechecktest.h
analitzagui/: CMakeLists.txt  algebrahighlighter.cpp  algebrahighlighter.h  analitzaguiexport.h  expressionedit.cpp  expressionedit.h  function.cpp  function.h  functioncartesian.cpp  functionimpl.cpp  functionimpl.h  functionimplicit.cpp  functionparametric.cpp  functionpolar.cpp  functionsmodel.cpp  functionsmodel.h  functionspainter.cpp  functionspainter.h  functionsview.cpp  functionsview.h  graph2d.cpp  operatorsmodel.cpp  operatorsmodel.h  plotsview2d.cpp  plotsview2d.h  plotsview3d.cpp  plotsview3d.h  variablesmodel.cpp  variablesmodel.h
analitzagui/tests/: CMakeLists.txt  functiontest.cpp  operatorsmodeltest.cpp  operatorsmodeltest.h
analitzajit/: CMakeLists.txt  analitzajitexport.h  expressioncompiler.cpp  expressioncompiler.h  jitanalyzer.cpp  jitanalyzer.h  llvmirexpressionwriter.cpp  llvmirexpressionwriter.h  operationscompiler.cpp  operationscompiler.h  typecompiler.cpp  typecompiler.h  valuecompiler.cpp  valuecompiler.h
analitzajit/examples/: CMakeLists.txt  benchmarking.cpp
analitzajit/tests/: CMakeLists.txt  analitzajittest.cpp  analitzajittest.h
analitzaplot/: CMakeLists.txt  analitzaplotexport.h  cartesiancurve.cpp  cartesiansurface.cpp  curve.cpp  curve.h  curvesmodel.cpp  curvesmodel.h  cylindricalsurface.cpp  dictionariesmodel.cpp  dictionariesmodel.h  dictionaryitem.cpp  dictionaryitem.h  function.cpp  function.h  functionfactory.cpp  functionfactory.h  functiongraph.cpp  functiongraph.h  functiongraphfactory.cpp  functiongraphfactory.h  functionimpl.cpp  functionimpl.h  functionsmodel.cpp  functionsmodel.h  functionutils.cpp  functionutils.h  graph2d.cpp  graph2d.h  graph3d.cpp  graph3d.h  implicitcurve.cpp  mathutils.cpp  mathutils.h  parametriccurve2d.cpp  parametriccurve3d.cpp  parametricsurface.cpp  phaseportrait.cpp  phaseportrait.h  planecurve.cpp  (+51 more)
analitzaplot/data/: CMakeLists.txt
analitzaplot/data/plots/: 3Ds.plots  CMakeLists.txt  basic_curves.plots  conics.plots  polar.plots
analitzaplot/examples/: CMakeLists.txt  audioplots.cpp  export3dplotdemo.cpp  plots2ddemo.cpp  plots3ddemo.cpp  plotsdictionarydemo.cpp
analitzaplot/functiongraphtypes/: cartesiancurve.cpp  cartesiansurface.cpp  cylindricalsurface.cpp  implicitcurve.cpp  parametriccurve2d.cpp  parametriccurve3d.cpp  parametricsurface.cpp  polarcurve.cpp  sphericalsurface.cpp
analitzaplot/private/: abstractfunctiongraph.cpp  abstractfunctiongraph.h  abstractfunctiongraphfactory.cpp  abstractfunctiongraphfactory.h  abstractmappinggraph.cpp  abstractmappinggraph.h  abstractplanecurve.cpp  abstractplanecurve.h  abstractplotitem.cpp  abstractplotitem.h  abstractspacecurve.cpp  abstractspacecurve.h  abstractsurface.cpp  abstractsurface.h  curve.h  export3d.cpp  export3d.h  functiongraph.cpp  functiongraph.h  functiongraphfactory.cpp  functiongraphfactory.h  functiongraphsmodel.cpp  functiongraphsmodel.h  mappinggraph.cpp  mappinggraph.h  marchingcubes.cpp  marchingsquares.h  mathutils.cpp  mathutils.h  octree.cpp  octree.h  planecurvefactory.cpp  planecurvefactory.h  plotitem.cpp  plotitem.h  quadtree.cpp  quadtree.h  shapedata.h  surfacefactory.cpp  surfacefactory.h
analitzaplot/private/backends/: cartesiancurve.cpp  cartesiansurface.cpp  cylindricalsurface.cpp  implicitcurve.cpp  implicitpolarcurve.cpp  implicitsurface.cpp  (+5 more)
analitzaplot/tests/: CMakeLists.txt  curvetest.cpp  curvetest.h  functiontest.cpp  functiontest.h  planecurvesmodeltest.cpp  planecurvesmodeltest.h  planecurvetest.cpp  planecurvetest.h  plotsdictionarymodeltest.cpp  plotsdictionarymodeltest.h  plotsmodeltest.cpp  plotsmodeltest.h  plotview2dtest.cpp  plotview3dtest.cpp  spacecurvetest.cpp  spacecurvetest.h  surfacetest.cpp  surfacetest.h
analitzawidgets/: CMakeLists.txt  analitzawidgets_export.h  expressionedit.cpp  expressionedit.h  plotsview2d.cpp  plotsview2d.h  plotsview3d.cpp  plotsview3d.h  plotsview3d_es.cpp  plotsview3d_es.h
calgebra/: CMakeLists.txt  main.cpp
declarative/: CMakeLists.txt  analitzadeclarativeplugin.cpp  analitzadeclarativeplugin.h  analitzawrapper.cpp  analitzawrapper.h  graph2dmobile.cpp  graph2dmobile.h  graph3ditem.cpp  graph3ditem.h  qmldir
declarative/examples/: 3Dexample.qml  Plot3D.qml
declarative/qml/: Graph2D.qml  Graph3D.qml
(+79 files in other folders)
