# set(testLibs ${QT_QTXML_LIBRARY} ${QT_QTTEST_LIBRARY} ${QT_QTGUI_LIBRARY} ${KDE4_KDECORE_LIBS} analitza analitzaplot analitzagui)
# 
# kde4_add_unit_test(planecurvetest planecurvetest.cpp)
# target_link_libraries(planecurvetest ${testLibs})
# 
# kde4_add_unit_test(spacecurvetest spacecurvetest.cpp)
# target_link_libraries(spacecurvetest ${testLibs})
# 
# kde4_add_unit_test(surfacetest surfacetest.cpp)
# target_link_libraries(surfacetest ${testLibs})
# 
# kde4_add_unit_test(plotsmodeltest plotsmodeltest.cpp)
# target_link_libraries(plotsmodeltest ${testLibs})
# 
# add_definitions("-DSOURCE_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}\"")
# kde4_add_unit_test(plotsdictionarymodeltest plotsdictionarymodeltest.cpp)
# target_link_libraries(plotsdictionarymodeltest ${testLibs})
